# my-first-ai-agent

./: .gitignore  CLAUDE.md  README.md  main.ipynb  main.py  main_old.py  pyproject.toml  report_single_ticker.py  test_recommendation_only.py  test_report.py
config/: __init__.py  agents.yaml  constants.py  tasks.yaml
crews/: investment_advisor_crew.py  investment_item_recommendar_crew.py  portfolio_crew.py  stock_crew.py
output/: compacted_investment_analysis_kr.md  investment_analysis.md  investment_analysis_kr.md  portfolio_recommendation_kr.md  report.md  research_report.md
reports/: investment_report_20250907_234825.html  investment_report_20250907_235640.html  investment_report_20250908_000546.html  investment_report_20250908_000800.html  investment_report_20250908_002224.html
tools/: advanced_stock_analysis.py  financial_tools.py  firecrawl_tool.py  news_sentiment_tool.py
utils/: __init__.py  logger.py  report_generator.py
