[project]
name = "my-first-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "crewai>=0.177.0",
    "crewai-tools>=0.69.0",
    "dotenv>=0.9.9",
    "openai>=1.106.1",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
